[WIP] Manually add themes to magit.html

--- a/Documentation/magit.html
+++ b/Documentation/magit.html
@@ -53,11 +53,16 @@ ul.no-bullet {list-style: none}
 -->
 </style>
 <link rel="stylesheet" type="text/css" href="/assets/page.css">
+<link class="s-css-s--style" rel="stylesheet"           title="Default"               href="/assets/themes/default.css">
+<link class="s-css-s--style" rel="stylesheet alternate" title="Default high contrast" href="/assets/themes/default-high-contrast.css">
+<link class="s-css-s--style" rel="stylesheet alternate" title="Solarized dark xterm"  href="/assets/themes/solarized-dark-xterm.css">
+<link class="s-css-s--style" rel="stylesheet alternate" title="Black on white"        href="/assets/themes/black-on-white.css">
+<script src="/assets/js/simple-css-switch.js"></script>
 
 
 </head>
 
-<body lang="en">
+<body lang="en" onload="simpleCssSwitch()">
 <h1 class="settitle" align="center">Magit User Manual</h1>
 
 
@@ -12055,6 +12060,6 @@ question &quot;Do these two commits make the same change?&quot;.</p>
 <hr>
 
 
-
+<div id="s-css-s--menu"></div>
 </body>
 </html>
